--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ li.seasons a {
     </p>
     <footer>
     <p><small>&copy; 2022 by 
-        Laza, All Rights Reserved ~ 
+        Sergei, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
